# openserverless-user

./: .env.example  .gitignore  README.md  index.html  package.json  pyproject.toml  tailwind.config.ts  vite.config.ts
docs/: ADDRESS.md
scripts/: .gitignore
scripts/kube_python/: adduser.py  config.json  configure.py  create_crd.py  create_namespace.py  create_pod.py  deleteuser.py  get_pod.py  milvus.json  minio.json  mongo.json  nginx.json  postgres.json  redis.json  userlist.py
src/: App.tsx  index.css
src/components/: UserManagement.tsx  UserModal.tsx  UserTable.tsx  addressApi.ts
src/components/ui/: loader.tsx
src/contexts/: AuthContext.tsx
src/lib/: ADDRESS.md  addressClient.ts
src/pages/: Auth.tsx  Index.tsx
src/types/: user.ts
tests/: conftest.py
tests/kube/: test_adduser_int.py  test_deleteuser_int.py  test_hello.py  test_hello_int.py  test_listuser.py  test_listuser_int.py  test_user.py
tests/lovable/: test_lovable_index.py  test_lovable_index_int.py
web/: index.html
web/assets/: index-3FkR6DCF.js  index-9Uo9LQ-8.css  index-BP-huTJx.css  index-CHIWFChi.js  index-CxhjE5CB.js  index-CxsmdJQ4.js  index-DAMrYLBA.js  index-DBLOI6tW.js  index-cWdTrJTu.js  index-kc0M1VOQ.js
